fix: shadow of form input section, gap between each fieldset

--- a/style.css
+++ b/style.css
@@ -83,9 +83,12 @@ fieldset{
 }
 
 #form-input{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
     width: 100%;
     background-color: white;
-    box-shadow: 0px 5px 5px darkgray;
+    box-shadow: 1px 0px 10px darkgray;
     padding: 20px;
     margin: 20px 0px;
 }
